feat: add a timer

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <link href="/src/assets/favicon.ico" rel="icon" type="image/x-icon"/>
+  <link href="https://fonts.googleapis.com/css2?family=VT323&display=swap" rel="stylesheet">
   <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 </head>
 <body>
